Expose verbatim names in usage matching and fix rank removal for TDWG only